# surrealdb-playground

./: Cargo.toml  initialization.surql
src/: main.rs
