[package]
name = "surrealdb-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-args = "0.5.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
surrealdb = { version = "^1", default-features = false, features = ["kv-rocksdb"] }
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }

[profile.dev.package."*"]
opt-level = 3
